# dsouls-name

./: Cargo.toml  adjectives.txt  names.txt  nouns.txt  places.txt  suffixes.txt  temp  titles.txt
res/: adjectives.txt  nouns.txt  places.txt  sentences.txt  suffixes.txt  titles.txt
src/: forms.rs  generator.rs  lib.rs  main.rs
