[package]
name = "dsouls-name"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "sentence"
path = "src/forms.rs"

[[bin]]
name = "normal"
path = "src/generator.rs"

[dependencies]
lazy_static = "1.4.0"
rand = "0.8.5"
string-builder = "0.2.0"
colored = "2.0.0"
clap = "*"
